Phase 2-4: Metadata, State Machine & LocalFs HDFS Commit
Phase 2: File metadata
- MetadataService: parses trace file names (app/env/region/cluster/host/pid/bootId/startTs/endTs/seq)
- FileIdGenerator: generates stable file_id from SHA-256 hash of metadata
- ChecksumService: SHA-256 checksum calculation
- HDFS final/staging path generation with template rendering
- Bucket assignment: hash(fileId) % bucketCount

Phase 3: Local state machine
- UploadState enum (DISCOVERED through COMMITTED_TO_HDFS)
- UploadFileRecord with all metadata and state fields
- UploadStateStore interface
- JsonlWalUploadStateStore: durable JSONL WAL, upsert/updateState/getByFileId/findPending
- State recovery on restart via replay

Phase 4: LocalFs HDFS commit protocol
- HdfsClient interface (exists, upload, rename, delete, size, open)
- LocalFsHdfsClient: file-system-backed HDFS simulation
- CommitProtocol interface + LocalFsCommitProtocol:
  - Normal: staging -> verify -> rename final
  - Final exists + checksum match: idempotent success
  - Final exists + checksum mismatch: quarantine, no overwrite
  - Staging residue recovery
- UploaderWorker: wires scanner -> metadata -> state -> commit

Infrastructure:
- Jackson YAML config loading (replaced hand-written parser)
- Full config model (11 config classes)
- Java 11 compatibility (fixed records, text blocks, switch arrows)
- 15 unit tests all passing
- E2E: sealed file -> scan -> metadata -> staging -> verify -> final
- Idempotent re-run: final exists + checksum match -> success

Verification:
- mvn test: 15/15 passed
- java -jar target/hdfs-trace-uploader.jar --config config/example-agent.yaml --once
- find /tmp/fake_hdfs: 1 file (final)
- 2nd run: idempotent, still 1 file